# pb-bazel-demo

./: .gitignore  README.md  WORKSPACE
cdp-pb/: BUILD.bazel
cdp-pb/src/main/proto/: greeter.proto  thing.proto
cdp-pb/src/main/resources/: deployment.properties
